@@ -29,6 +29,7 @@
 	- their must be a { between two % in a query format (unless %% is used)
 
 2.5.5 -> 2.5.6:
+	- add new Epoch: keyword just like Serial:.
 	- solaris: don't attempt static link. (Tim Mooney)
 	- fix: timeCheck in rpm.c should be unsigned long. (Tim Mooney)
 	- osf: prov searches only shared libraries. (Tim Mooney)
